apps/routers/scrob-dev/scrob-dev-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: scrob-dev
  namespace: traefik-staging
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`scrob-dev.hephy.pro`)
    services:
    - kind: Service
      name: scrob-dev-public-ingress
      namespace: traefik-staging
      port: 80
--- # Make sure backend is configured for TLS before we enable this
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: scrob-dev-web
  namespace: traefik-staging
spec:
  entryPoints:
  - websecure
  routes:
  - match: HostSNI(`scrob-dev.hephy.pro`)
    services:
    - name: scrob-dev-cluster-escape
      namespace: traefik-staging
      port: 443
  tls:
    # secretName: scrob-dev-tls
    passthrough: true
